# yieldex-ic-wallet-manager

./: .gitignore  APY_PARSER_README.md  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  goal.md  netlify.toml  package-lock.json  package.json
docs/components/: APY_PARSER_README.md  AUTO_POSITION_SYNCER.md  SCHEDULER_README.md
scripts/: poll_logs.sh
src/yieldex-ic-wallet-manager-backend/: Cargo.toml  yieldex-ic-wallet-manager-backend.did
src/yieldex-ic-wallet-manager-backend/src/: lib.rs
src/yieldex-ic-wallet-manager-backend/src/abi/: CompoundComet.json  LINK.json  QuoterV2.json  UniswapV2Router.json  UniversalRouter.json  WETH.json  aave_pool.json
src/yieldex-ic-wallet-manager-backend/src/services/: aave.rs  approve_usdc.rs  approve_weth.rs  apy_parser.rs  compound.rs  erc20.rs  get_balance.rs  get_balance_link.rs  get_balance_usdc.rs  mod.rs  nonce_manager.rs  permissions.rs  position_sync.rs  rebalance.rs  rpc_service.rs  scheduler.rs  send_eth.rs  sign_message.rs  tokens.rs  transfer_link.rs  uniswap.rs  wrap_eth.rs
src/yieldex-ic-wallet-manager-backend/src/types/: apy.rs  mod.rs  permissions.rs  recommendation.rs  scheduler.rs  storable.rs
src/yieldex-ic-wallet-manager-frontend/: .env.example  .gitignore  README.md  index.html  package.json  playwright-dev-pipeline.js  tailwind.config.js  vite-env.d.ts  vite.config.ts
src/yieldex-ic-wallet-manager-frontend/src/: App.js  App.tsx  main.tsx  vite-env.d.ts  wagmi.ts
src/yieldex-ic-wallet-manager-frontend/src/contexts/: ToastContext.tsx
tests/: Cargo.toml  lib.rs  pocket_ic_tests.rs
(+44 files in other folders)
