[package]
name = "yieldex-ic-wallet-manager-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17"
ic-cdk-macros = "0.9"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"

# EVM / ECDSA related - Following ic-alloy README
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.0", default-features = false, features = ["icp", "signers", "contract", "providers"] }
ethers-core = { version = "2.0", default-features = false }
hex = "0.4"
getrandom = { version = "0.2", features = ["custom"] }

# Serialization
serde = "1.0"
candid = "0.10.13"

[profile.release]
lto = true
opt-level = 'z'
